--- a/Study 3/Cleaning/compMotCleaningStudy3.Rmd
+++ b/Study 3/Cleaning/compMotCleaningStudy3.Rmd
@@ -1111,7 +1111,7 @@ for(u in uIds){
       runSum <- 0
       runSD <- 0
       runProps <- 0
-      runChos <- 0
+      runChoices <- 0
     }
     
     fullTD[fullTD$subID == u & fullTD$trialTotal==curTrial, (LIDX+c)] <- runAve
@@ -1151,7 +1151,11 @@ for(i in 1:nrow(fullTD)){
     fullTD$aveD.AP[i] <- aveAP[i,fullTD$greatDes[i]]
   }
 }
-#fullTD$aveD.AP <- aveAP[cbind(seq_along(fullTD$greatDes), fullTD$greatDes)]
+
+sumAP <- t(apply(sumMat, 1, softmax))
+colnames(sumAP) <- c("aveL.AP", "aveR.AP")
+fullTD <- cbind(fullTD, sumAP)
+fullTD$sumC.AP <- sumAP[cbind(seq_along(fullTD$choice), fullTD$choice)]
 
 # Group Average for Most Desirable
 # fullTD$aveCD.AP <- NA
@@ -1248,15 +1252,16 @@ plot(output)
 ```
 
 ```{r}
-
 fullTD$desEnt <- apply(cbind(fullTD$leftDesAP, fullTD$rightDesAP), 1, entropy)
 fullTD$apEnt <- apply(cbind(fullTD$rAP, fullTD$lAP), 1, entropy)
 fullTD$aveEnt <- apply(cbind(fullTD$aveL.AP, fullTD$aveR.AP), 1, entropy)
 fullTD$svEnt <- apply(cbind(fullTD$RSV.AP, fullTD$LSV.AP), 1, entropy)
+fullTD$sumEnt <- apply(cbind(fullTD$runSumL, fullTD$runSumR), 1, function(x) entropy(softmax(x)))
+fullTD$simEnt <- apply(cbind(fullTD$simL, fullTD$simR), 1, function(x) entropy(softmax(x)))
 ```
 
 ```{r}
-fullTD <- merge(fullTD, indDiff[c("subID", "Party", "Polit", "conf", "decep", "SStatus", "SocClass", "SE","NFC", "ENT", "MemSE", "PrivCSE", "PubCSE", "IdImp", "SGO", "affPol")], by = "subID", all.x = T )
+fullTD <- merge(fullTD, indDiff[c("subID", "Party", "Polit", "conf", "decep", "SStatus", "SocClass", "SE","NFC", "ENT", "MemSE", "PrivCSE", "PubCSE", "IdImp", "SGO", "affPol", "AffPol_Dem", "AffPol_Rep")], by = "subID", all.x = T )
 ```
 
 ```{r}
@@ -1468,7 +1473,7 @@ for(i in uIds){
 ```
 
 ```{r}
-fullDf <- merge(cleanRe, indDiff[c("subID", "Party", "Polit", "conf", "decep", "SStatus", "SocClass", "SE","NFC", "ENT", "MemSE", "PrivCSE", "PubCSE", "IdImp", "SGO", "affPol")], by = "subID", all.x = T )
+fullDf <- merge(cleanRe, indDiff[c("subID", "Party", "Polit", "conf", "decep", "SStatus", "SocClass", "SE","NFC", "ENT", "MemSE", "PrivCSE", "PubCSE", "IdImp", "SGO", "affPol", "AffPol_Dem", "AffPol_Rep")], by = "subID", all.x = T )
 ```
 
 
