--- a/Study 1/Cleaning/compMotCleaningStudy1.Rmd
+++ b/Study 1/Cleaning/compMotCleaningStudy1.Rmd
@@ -734,7 +734,7 @@ for(u in uIds){
       runSum <- 0
       runSD <- 0
       runProps <- 0
-      runChos <- 0
+      runChoices <- 0
     }
     
     fullTD[fullTD$subID == u & fullTD$trialTotal==curTrial, (LIDX+c)] <- runAve
@@ -774,13 +774,11 @@ for(i in 1:nrow(fullTD)){
     fullTD$aveD.AP[i] <- aveAP[i,fullTD$greatDes[i]]
   }
 }
-#fullTD$aveD.AP <- aveAP[cbind(seq_along(fullTD$greatDes), fullTD$greatDes)]
 
-# Group Average for Most Desirable
-# fullTD$aveCD.AP <- NA
-# greatDes12 <- fullTD$greatDes
-# greatDes12[fullTD$greatDes==3] <- NA
-# fullTD$aveCD.AP <- aveAP[cbind(seq_along(greatDes12), greatDes12)]
+sumAP <- t(apply(sumMat, 1, softmax))
+colnames(sumAP) <- c("aveL.AP", "aveR.AP")
+fullTD <- cbind(fullTD, sumAP)
+fullTD$sumC.AP <- sumAP[cbind(seq_along(fullTD$choice), fullTD$choice)]
 
 uc <- unique(fullTD$choice)
 unchosen <- function(input){
@@ -871,11 +869,12 @@ plot(output)
 ```
 
 ```{r}
-
 fullTD$desEnt <- apply(cbind(fullTD$leftDesAP, fullTD$rightDesAP), 1, entropy)
 fullTD$apEnt <- apply(cbind(fullTD$rAP, fullTD$lAP), 1, entropy)
 fullTD$aveEnt <- apply(cbind(fullTD$aveL.AP, fullTD$aveR.AP), 1, entropy)
 fullTD$svEnt <- apply(cbind(fullTD$RSV.AP, fullTD$LSV.AP), 1, entropy)
+fullTD$sumEnt <- apply(cbind(fullTD$runSumL, fullTD$runSumR), 1, function(x) entropy(softmax(x)))
+fullTD$simEnt <- apply(cbind(fullTD$simL, fullTD$simR), 1, function(x) entropy(softmax(x)))
 ```
 
 
