--- a/CombAnalysis/reportingAnalysis.Rmd
+++ b/CombAnalysis/reportingAnalysis.Rmd
@@ -1108,6 +1108,26 @@ summary(m)
 ggpredict(m, c("SV_F")) %>% plot()
 ```
 
+### Cumulative Norms, Similarity, and Desirability
+
+```{r}
+m <- lmer( scale(selfResp) ~ scale(sumCueF) + scale(Sim) + scale(desirability) +
+    ( scale(SV_F) + scale(Sim) + scale(desirability) | subID) + (1 | trait), data = reValDf3, control = lmerControl(optimizer = "bobyqa",
+                                    optCtrl = list(maxfun = 100000)))
+summary(m)
+tidy(m,conf.int=TRUE,effects="fixed")
+```
+
+#### Between conditions?
+
+```{r}
+m <- lmer( scale(selfResp) ~ scale(sumCueF) * condition + scale(Sim) + scale(desirability) +
+    ( scale(SV_F) + scale(Sim) + scale(desirability) | subID) + (1 | trait), data = reValDf3, control = lmerControl(optimizer = "bobyqa",
+                                    optCtrl = list(maxfun = 100000)))
+summary(m)
+tidy(m,conf.int=TRUE,effects="fixed")
+```
+
 ## Combined Plot
 
 ```{r}
